# solana-2048

./: README.md
program/: Anchor.toml  README.md  package.json
program/programs/lumberjack/: Cargo.toml
program/programs/lumberjack/src/: errors.rs  lib.rs
program/programs/lumberjack/src/instructions/: init_player.rs  mod.rs  pause_thread.rs  push_in_direction.rs  reset_thread.rs  reset_weekly_highscore.rs  restart_game.rs  resume_thread.rs  start_thread.rs
program/programs/lumberjack/src/state/: board.rs
program/tests/: ThreadsTest.ts  lumberjack.ts
unity/solana-2048/Assets/: DirectionIndicator.cs  SoundToggle.cs  tileTest.txt
unity/solana-2048/Assets/Config/: Tile_1024.asset  Tile_128.asset  Tile_16.asset  Tile_16384.asset  Tile_2.asset  Tile_2048.asset  Tile_256.asset  Tile_32.asset  Tile_32768.asset  Tile_4.asset  Tile_4096.asset  Tile_512.asset  Tile_64.asset  Tile_65536.asset  Tile_8.asset  Tile_8192.asset
unity/solana-2048/Assets/Materials/: Background.mat  Background2.mat  Background3.mat  Background4.mat  BoardBackground.mat  Cell.mat  Tile.mat
unity/solana-2048/Assets/Models/: cube.fbx
unity/solana-2048/Assets/Prefabs/: BoardManager.prefab  Cell.prefab  CloseButton.prefab  DefaultButton.prefab  HighscordListEntry.prefab  HighscorePopup.prefab  LoadingDirection.prefab  NftItemView.prefab  NftListPopup.prefab  ScoreBlimp.prefab  ScoreBlimpAnimation.anim  SessionPopup.prefab  SocketStatusWidget.prefab  SolBalanceWidget.prefab  Tile.prefab  WebSocketService.prefab
unity/solana-2048/Assets/Resources/: DOTweenSettings.asset
unity/solana-2048/Assets/Scenes/: Solana2048.unity
unity/solana-2048/Assets/Scripts/: BasePopup.cs  BoardManager.cs  CameraShake.cs  Cell.cs  DestroyDelayed.cs  HighscoreListEntry.cs  HighscorePopup.cs  NftContextMenu.cs  NftItemListView.cs  NftItemView.cs  NftListPopup.cs  NftMintingService.cs  NftService.cs  SelectedNft.cs  Tile.cs  (+10 more)
unity/solana-2048/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+31 files in other folders)
