[package]
name = "lumberjack"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lumberjack"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["metadata"] }
mpl-token-metadata = "=1.10.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
gpl-session = { version = "0.2.0", features = ["no-entrypoint"] }
solana-program = "*"