[package]
name = "solana_twentyfourtyeight"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_twentyfourtyeight"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.27.0", features = ["metadata"] }
mpl-token-metadata = "=1.10.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
gpl-session = { version = "1.0.0", features = ["no-entrypoint"] }
solana-program = "*"
clockwork-sdk = "2.0.18"
