[package]
name = "solana_twentyfourtyeight"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_twentyfourtyeight"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
session-keys = { version = "2.0.1", features = ["no-entrypoint"] }
solana-program = "*"
clockwork-sdk = { git = "https://github.com/open-clockwork/clockwork" }
